cmake_minimum_required(VERSION 3.9)
project(codebase)

set(CMAKE_CXX_STANDARD 11)

add_executable(codebase
        cli/cli.cc
        cli/cli.h
        cli/cli_example_01.cc
        cli/cli_example_02.cc
        cli/cli_example_03.cc
        cli/cli_example_04.cc
        cli/cli_example_05.cc
        cli/cli_example_06.cc
        cli/cli_example_07.cc
        cli/cli_example_08.cc
        cli/cli_example_09.cc
        cli/cli_example_10.cc
        cli/cli_example_11.cc
        cli/cli_example_12.cc
        cli/start.cc
        data/ages_90
        data/employee_5
        data/employee_50
        data/salary_5
        ix/ix.cc
        ix/ix.h
        ix/ix_test_util.h
        ix/ixtest_01.cc
        ix/ixtest_02.cc
        ix/ixtest_03.cc
        ix/ixtest_04.cc
        ix/ixtest_05.cc
        ix/ixtest_06.cc
        ix/ixtest_07.cc
        ix/ixtest_08.cc
        ix/ixtest_09.cc
        ix/ixtest_10.cc
        ix/ixtest_11.cc
        ix/ixtest_12.cc
        ix/ixtest_13.cc
        ix/ixtest_14.cc
        ix/ixtest_15.cc
        ix/ixtest_extra_01.cc
        ix/ixtest_extra_02.cc
        qe/qe.cc
        qe/qe.h
        qe/qe_test_util.h
        qe/qetest_01.cc
        qe/qetest_02.cc
        qe/qetest_03.cc
        qe/qetest_04.cc
        qe/qetest_05.cc
        qe/qetest_06.cc
        qe/qetest_07.cc
        qe/qetest_08.cc
        qe/qetest_09.cc
        qe/qetest_10.cc
        qe/qetest_11.cc
        qe/qetest_12.cc
        qe/qetest_13.cc
        qe/qetest_14.cc
        qe/qetest_15.cc
        qe/qetest_16.cc
        qe/qetest_p00.cc
        qe/qetest_p01.cc
        qe/qetest_p02.cc
        qe/qetest_p03.cc
        qe/qetest_p04.cc
        qe/qetest_p05.cc
        qe/qetest_p06.cc
        qe/qetest_p07.cc
        qe/qetest_p08.cc
        qe/qetest_p09.cc
        qe/qetest_p10.cc
        qe/qetest_p11.cc
        qe/qetest_p12.cc
        rbf/pfm.cc
        rbf/pfm.h
        rbf/rbfm.cc
        rbf/rbfm.h
        rbf/rbftest1.cc
        rbf/rbftest10.cc
        rbf/rbftest11.cc
        rbf/rbftest12.cc
        rbf/rbftest2.cc
        rbf/rbftest3.cc
        rbf/rbftest4.cc
        rbf/rbftest5.cc
        rbf/rbftest6.cc
        rbf/rbftest7.cc
        rbf/rbftest8.cc
        rbf/rbftest8b.cc
        rbf/rbftest9.cc
        rbf/test_util.h
        rm/rm.cc
        rm/rm.h
        rm/rm_test_util.h
        rm/rmtest_00.cc
        rm/rmtest_01.cc
        rm/rmtest_02.cc
        rm/rmtest_03.cc
        rm/rmtest_04.cc
        rm/rmtest_05.cc
        rm/rmtest_06.cc
        rm/rmtest_07.cc
        rm/rmtest_08.cc
        rm/rmtest_09.cc
        rm/rmtest_10.cc
        rm/rmtest_11.cc
        rm/rmtest_12.cc
        rm/rmtest_13.cc
        rm/rmtest_13b.cc
        rm/rmtest_14.cc
        rm/rmtest_15.cc
        rm/rmtest_create_tables.cc
        rm/rmtest_delete_tables.cc
        rm/rmtest_extra_1.cc
        rm/rmtest_extra_2.cc
        shared.h)
